bk_ida/gccida/c3/rtx_equal_for_field_assignment_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rtx_equal_for_field_assignment_p/src/combine.c:8024:33: error: use of undeclared identifier 'machine_mode'
v5 = gen_lowpart_for_combine( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtx), x); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rtx_equal_for_field_assignment_p/src/combine.c:8024:48: error: expected expression
v5 = gen_lowpart_for_combine( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtx), x); 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rtx_equal_for_field_assignment_p/src/combine.c:8037:33: error: use of undeclared identifier 'machine_mode'
v7 = gen_lowpart_for_combine( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v6), y); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rtx_equal_for_field_assignment_p/src/combine.c:8037:48: error: expected expression
v7 = gen_lowpart_for_combine( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v6), y); 
                                               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rtx_equal_for_field_assignment_p/src/obj/combine.o] Error 1
